--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "firebase": "^11.9.1",
+    "font-awesome": "^4.7.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-circular-progressbar": "^2.2.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
