--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "bootstrap": "^5.3.7",
     "firebase": "^11.9.1",
     "font-awesome": "^4.7.0",
