--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
       {
         "source": "/analy/:match*",
         "destination": "/_vercel/insights/:match*"
-      }
+      },
+      { "source": "/analytics/:match*", "destination": "/_vercel/insights/:match*" }
     ]
   }
