--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
         "source": "/analy/:match*",
         "destination": "/_vercel/insights/:match*"
       },
-      { "source": "/analytics/:match*", "destination": "/_vercel/insights/:match*" }
+      { "source": "/analytics/:match*", "destination": "/_vercel/insights/:match*" },
+      { "source": "/wowza", "destination": "/portfolio" }
     ]
   }
