--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
